# o-f-f-s-e-t-m-a-n-a-g-e-r

./: CMakeLists.txt
src/: dllmain.cpp
src/inc/: config.json  offsets.txt  pointer_info.h
